# leit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Cargo.toml.backup  LICENSE-APACHE  README.md  debug_ordering  debug_ordering.rs
.cargo/: config.toml
.git-issue/: statuses.bash
.github/: copyright.sh
.github/hooks/: clippy-no-std.sh  clippy-wasm.sh
.github/workflows/: ci.yml  no_std.yml  security.yml
.tickets/: lei-0mjj.md  lei-3ym2.md  lei-4wfz.md  lei-cra0.md  lei-fc80.md  lei-feuk.md  lei-fp20.md  lei-kpaf.md  lei-l9o7.md  lei-o9tu.md  lei-svvp.md  lei-t9bf.md  lei-ugb6.md  lei-vhex.md  lei-z4d1.md  lei-z8w5.md  lei-zyol.md
crates/leit-integration-tests/: Cargo.toml
crates/leit-integration-tests/src/: lib.rs
crates/leit-integration-tests/tests/: phase1_readiness.rs  unicode_pipeline.rs
crates/leit_benchmark/: Cargo.toml  README.md
crates/leit_benchmark/src/: lib.rs  main.rs
crates/leit_collect/: Cargo.toml  README.md
crates/leit_collect/src/: lib.rs
crates/leit_collect/tests/: property_invariants.proptest-regressions  property_invariants.rs
crates/leit_core/: Cargo.toml  README.md
crates/leit_core/src/: core.rs  entity.rs  error.rs  hit.rs  identifiers.rs  lib.rs  score.rs  scratch.rs  types.rs
crates/leit_core/tests/: property_invariants.rs
crates/leit_fusion/: Cargo.toml  README.md
crates/leit_fusion/src/: lib.rs
crates/leit_fusion/tests/: dedup.rs  property_invariants.proptest-regressions  property_invariants.rs
crates/leit_index/: Cargo.toml  README.md
crates/leit_index/src/: builder.rs  codec.rs  error.rs  index.rs  lib.rs  lib.rs.backup  memory.rs  search.rs  segment.rs
crates/leit_index/tests/: boolean_execution.proptest-regressions  boolean_execution.rs  filter_execution.rs  search_behavior.rs  segment_roundtrip.rs
crates/leit_integration_tests/: Cargo.toml  README.md
crates/leit_integration_tests/src/: lib.rs
crates/leit_integration_tests/tests/: phase1_readiness.rs  unicode_pipeline.proptest-regressions  unicode_pipeline.rs
crates/leit_postings/: Cargo.toml  README.md
crates/leit_postings/src/: lib.rs
crates/leit_postings/tests/: property_invariants.rs
crates/leit_query/: Cargo.toml  README.md
crates/leit_query/src/: builder.rs  lib.rs  planner.rs  types.rs
crates/leit_query/tests/: planner_phase1.rs  property_invariants.rs
crates/leit_score/: Cargo.toml  README.md
crates/leit_score/src/: lib.rs
crates/leit_score/tests/: property_invariants.rs
crates/leit_text/: Cargo.toml  README.md
crates/leit_text/src/: lib.rs
docs/: 2026-03-16-indexed-rpn-posting-tape-notes.md  2026-03-18-review-fixes-plan.md  design.md  leit_kernel_handover.md  pr-preparation.md  vision.md
docs/designs/: query_planning_architecture.md
docs/superpowers/notes/: 2026-03-11-phase1-summary.md
docs/superpowers/plans/: 2026-03-11-phase1-gap-closure.md
examples/: README.md
examples/basic_search/: Cargo.toml  README.md
examples/basic_search/src/: main.rs
examples/explicit_execution/: Cargo.toml  README.md
examples/explicit_execution/src/: main.rs
examples/leit_benchmark/: README.md
examples/leit_notes/: Cargo.toml
examples/leit_notes/src/: main.rs
specs/: README.md
specs/decisions/: decided.md  open-decisions.md
specs/tasks/: 00_workspace_setup.md  leit_collect.md  leit_core.md  leit_fusion.md  leit_index.md  leit_postings.md  leit_query.md  leit_score.md  leit_text.md
specs/testing/: leit_testing.md
tests/: e2e_entity_search.rs
