[workspace]
members = [
    "crates/leit_collect",
    "crates/leit_core",
    "crates/leit_fusion",
    "crates/leit_postings",
    "crates/leit_query",
    "crates/leit_score",
    "crates/leit_text",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
description = "A fast search engine library inspired by Lucene"
edition = "2024"
rust-version = "1.88.0"
authors = ["LeiT Contributors"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/forest-rs/leit"
homepage = "https://github.com/forest-rs/leit"
keywords = ["information-retrieval", "lucene", "search"]
categories = ["algorithms", "data-structures", "database-implementations"]

[workspace.dependencies]
# Internal crate dependencies
leit_collect = { default-features = false, path = "crates/leit_collect" }
leit_core = { default-features = false, path = "crates/leit_core" }
leit_fusion = { default-features = false, path = "crates/leit_fusion" }
leit_postings = { default-features = false, path = "crates/leit_postings" }
leit_query = { default-features = false, path = "crates/leit_query" }
leit_score = { default-features = false, path = "crates/leit_score" }
leit_text = { default-features = false, path = "crates/leit_text" }

# Testing
proptest = { version = "1.0" }

# Math
core_maths = { default-features = false, version = "0.1" }

# Text normalization
icu_casemap = { version = "1.5" }
icu_locid = { default-features = false, version = "1.5" }
unicode-normalization = { default-features = false, version = "0.1.25" }

[workspace.lints]
# LINEBENDER LINT SET - Cargo.toml - v8
# See https://linebender.org/wiki/canonical-lints/
rust.keyword_idents_2024 = "forbid"
rust.non_ascii_idents = "forbid"
rust.non_local_definitions = "forbid"
rust.unsafe_op_in_unsafe_fn = "forbid"

rust.elided_lifetimes_in_paths = "warn"
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.trivial_numeric_casts = "warn"
rust.unnameable_types = "warn"
rust.unreachable_pub = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_macro_rules = "warn"
rust.unused_qualifications = "warn"

rust.unsafe_code = "deny"

clippy.too_many_arguments = "allow"

clippy.allow_attributes_without_reason = "warn"
clippy.cast_possible_truncation = "warn"
clippy.cast_possible_wrap = "warn"
clippy.collection_is_never_read = "warn"
clippy.dbg_macro = "warn"
clippy.debug_assert_with_mut_call = "warn"
clippy.default_trait_access = "warn"
clippy.doc_markdown = "warn"
clippy.fn_to_numeric_cast_any = "warn"
clippy.infinite_loop = "warn"
clippy.large_stack_arrays = "warn"
clippy.mismatching_type_param_order = "warn"
clippy.missing_assert_message = "warn"
clippy.missing_fields_in_debug = "warn"
clippy.same_functions_in_if_condition = "warn"
clippy.semicolon_if_nothing_returned = "warn"
clippy.should_panic_without_expect = "warn"
clippy.todo = "warn"
clippy.unseparated_literal_suffix = "warn"
clippy.use_self = "warn"

clippy.cargo_common_metadata = "warn"
clippy.negative_feature_names = "warn"
clippy.redundant_feature_names = "warn"
clippy.wildcard_dependencies = "warn"
# END LINEBENDER LINT SET

# Prefer using `#[expect(...)]` instead of `#[allow(...)]`.
# `#[expect(...)]` warns when the suppressed lint no longer fires.
clippy.allow_attributes = "warn"
