[package]
name = "leit_benchmark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Deterministic benchmark harnesses for the Leit retrieval workspace"
publish = false

[dependencies]
leit_core = { features = ["std"], workspace = true }
leit_index = { features = ["std"], workspace = true }
leit_text = { features = ["std"], workspace = true }

[lints]
workspace = true
