[package]
name = "leit_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types and traits shared across Leit crates"
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = []

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
