[package]
name = "leit_fusion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
leit_core.workspace = true

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
