[package]
name = "leit_fusion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
