[package]
name = "leit_index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
leit_core.workspace = true
leit_text.workspace = true
leit_query.workspace = true
leit_postings.workspace = true
leit_score.workspace = true
leit_collect.workspace = true

[features]
default = ["std"]
std = []

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
