[package]
name = "leit_index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Index construction and segment access for Leit"
keywords.workspace = true
categories.workspace = true

[dependencies]
leit_collect.workspace = true
leit_core.workspace = true
leit_query.workspace = true
leit_score.workspace = true
leit_text.workspace = true

[features]
default = ["std"]
std = [
    "leit_core/std",
    "leit_text/std",
    "leit_query/std",
    "leit_score/std",
    "leit_collect/std",
]

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
