[package]
name = "leit_postings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Postings storage and cursor traversal for Leit"
keywords.workspace = true
categories.workspace = true

[dependencies]
leit_core.workspace = true

[features]
default = ["std"]
std = ["leit_core/std"]

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
