[package]
name = "leit_query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
leit_core.workspace = true

[features]
default = ["std"]
std = []

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
