[package]
name = "leit_text"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
leit_core = { path = "../leit_core", features = ["alloc"] }
icu_segmenter = { version = "1.5", optional = true }
icu_normalizer = { version = "1.5", optional = true }

[features]
default = ["alloc"]
alloc = []
std = ["alloc"]
icu = ["std", "icu_segmenter", "icu_normalizer"]
