[package]
name = "leit_text"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Text analysis for Leit"
keywords.workspace = true
categories.workspace = true

[dependencies]
icu_casemap.workspace = true
icu_locale_core.workspace = true
icu_normalizer.workspace = true
leit_core.workspace = true

[features]
default = ["std"]
std = ["leit_core/std"]

[lints]
workspace = true
